# metaflow-mlops-quickstart

./: .env.example  .gitignore  LICENSE  Makefile  README.md  mf_configure.py  pyproject.toml  pytest.ini  requirements.txt
cloudformation/: README.md  metaflow-cfn-template.yml
docker/pytorch-extras/: Dockerfile  requirements.txt
flows/: config.py  example_flow.py  example_gpu_flow.py
tests/: test_example_flow.py  test_example_gpu_flow.py
