[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "~3.11"
metaflow = "^2.12.17"
pylint = "^3.2.6"
pytest-xdist = "^3.6.1"
python-dotenv = "^1.0.1"
numpy = "^2.1.0"

[tool.pytest.ini_options]
pythonpath = [".", "flows"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
